--- a/app/src/main/res/layout/activity_bottomnavig.xml
+++ b/app/src/main/res/layout/activity_bottomnavig.xml
@@ -9,10 +9,10 @@
         tools:context=".Fragments.BottomnavigActivity">
 
     <androidx.viewpager.widget.ViewPager
-            android:id="@+id/message"
+            android:id="@+id/viewpager"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="HI"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
