--- a/app/src/main/res/layout/activity_input_view.xml
+++ b/app/src/main/res/layout/activity_input_view.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".InputViewActivity"
+        tools:context=".RecyclerView.InputViewActivity"
         android:orientation="horizontal">
 
     <ImageView
